--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,5 +50,6 @@ dependencies {
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
     def lottieVersion = '5.0.3'
     implementation "com.airbnb.android:lottie:$lottieVersion"
-    implementation 'com.tencent.wcdb:room:1.1-19'
+    implementation 'androidx.room:room-runtime:2.5.0-alpha01'
+    annotationProcessor 'androidx.room:room-compiler:2.5.0-alpha01'
 }
