--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,35 +40,19 @@
         <activity
             android:name=".ReserveActivity"
             android:exported="false" />
-        <!--
-<activity
-            android:name=".MainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_main"
-            android:theme="@style/Theme.AndroidFinalProject.NoActionBar" />
-        -->
+
         <activity
             android:name=".LogInActivity"
             android:exported="false" />
-        <!--
-<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        -->
         <activity
             android:name=".MainActivity"
             android:exported="false" />
-        <!--
-<intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
-        -->
+        <activity
+            android:name=".room.CustomerSupportActivity"
+            android:exported="false" />
+
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
